--- a/plugin/index.html
+++ b/plugin/index.html
@@ -9,37 +9,34 @@
 
 <body>
   <h1>Popular Videos Overlay</h1>
+  <div style="position: relative; display: block; max-width: 640px;">
+    <div style="padding-top: 56.25%;">
+      <video id="myPlayerID"
+      data-video-id="4454620113001"
+      data-account="1752604059001"
+      data-player="SyE24N4Of"
+      data-embed="default"
+      data-application-id
+      class="video-js"
+      controls
+      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; width: 100%; height: 100%;"></video>
+      <script src="//players.brightcove.net/1752604059001/SyE24N4Of_default/index.min.js"></script>
+    </div>
+  </div>
 
-			<div style="position: relative; display: block; max-width: 640px;">
-				<div style="padding-top: 56.25%;">
-					<video id="myPlayerID"
-					  data-video-id="4454620113001"
-						data-account="1752604059001"
-						data-player="SyE24N4Of"
-						data-embed="default"
-						data-application-id
-						class="video-js"
-						controls
-						style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; width: 100%; height: 100%;"></video>
-				  <script src="//players.brightcove.net/1752604059001/SyE24N4Of_default/index.min.js"></script>
-				</div>
-			</div>
+  <!-- styles and script for overlay plugin -->
+  <link href="//players.brightcove.net/videojs-overlay/1/videojs-overlay.css" rel='stylesheet'>
+  <script src="//players.brightcove.net/videojs-overlay/1/videojs-overlay.min.js"></script>
 
-			<!-- styles and script for overlay plugin -->
-	    <link href="//players.brightcove.net/videojs-overlay/1/videojs-overlay.css" rel='stylesheet'>
-	    <script src="//players.brightcove.net/videojs-overlay/1/videojs-overlay.min.js"></script>
-
-	<p>
-	  <strong>Analytics API request:</strong>
-	</p>
-	<pre id="apiRequest"></pre>
-	<p>
-	  <strong>Analytics Response data</strong>
-	</p>
-	<pre id="responseData"></pre>
+  <p> <strong>Analytics API request:</strong>
+  </p>	<pre id="apiRequest"></pre>
+  <p> <strong>Analytics Response data</strong>
+  </p>	<pre id="responseData"></pre>
 
   <script type="text/javascript" src="popular-videos-overlay.js"></script>
-  <script>videojs('myPlayerID').popularVideosOverlay();</script>
-
+  <script>
+    videojs('myPlayerID').popularVideosOverlay();
+  </script>
 </body>
+
 </html>
